# WebServer

./: CMakeLists.txt  hh.html  index.html  main.cpp
inc/: dealRequestPath.h  handleRequestPath.h
src/: dealRequestPath.cpp  handleRequestPath.cpp
